# FLAPPY.-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
configs/: config.yaml
model/: Version2.pt  flappy_dqn_v1.pt
src/: __init__.py  flappy.py
src/ai/: dqn_agent.py  flappy_env.py  flappy_headless.py  flappy_visual.py  parallel_train_dqn.py  play_dqn.py  train_dqn.py
